prints out moodle tasks with hardcoded user/pass"